--- a/externalserver/index.html
+++ b/externalserver/index.html
@@ -5,6 +5,6 @@
 		<script src="index.js", type='text/javascript'></script>
 	</head>
 	<body>
-		play
+		plays midi coming in through the api
 	</body>
 </html>
